Link del resume

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
           <!-- Resume -->
           <a
-            href="https://docs.google.com/document/d/1zfGurPLEwqT6-QSCl4oQJ1yVDbGZCNDqo7iTOlgNPv0/edit?usp=sharing"
+            href="https://docs.google.com/document/d/14PzXr_kJZSjsRUhqOWdPx0660hwC1EYCcxYXo4q5nW8/edit"
             class="btn"
             >Resume</a>
         </div>
