--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 alt="Mi Portafolio"
               />
               <a
-                class="btn btn-one"
+                class="btn btn-two"
                 href="https://alvaroperinan.netlify.app/"
                 target="_blank"
                 >Preview Link</a
