Se adiciona proyecto RG construcciones a proyectos personales

--- a/index.html
+++ b/index.html
@@ -159,6 +159,43 @@
         </h2>
 
         <div id="project-full">
+          <article class="project-content">
+            <div class="project-image project-image-one">
+              <img
+                src="./img/projects/Rgcontrucciones.png"
+                alt="RG Construcciones"
+              />
+              <a
+                class="btn btn-two"
+                href="https://rg-construcciones.vercel.app"
+                target="_blank"
+                >Preview Link</a
+              >
+            </div>
+
+            <div class="card-content">
+              <h2>RG Construcciones</h2>
+              
+              <div class="project-info">
+                <div class="stack">
+                  <small class="language">HTML5</small>
+                  <small class="language">CSS3</small>
+                  <small class="language">JavaScript</small>
+                  <small class="language">React</small>
+                  <small class="language">Vercel</small>
+                </div>
+
+                <div class="project-links">
+                  <a
+                    href="https://rg-construcciones.vercel.app"
+                    target="_blank"
+                    ><i class="fas fa-external-link-alt"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </article>
+
          <!-- Proyecto 1 -->
           <article class="project-content">
             <div class="project-image project-image-one">
