Error metodo post

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <section class="contact" id="contact">
         <h2 class="heading"><span>Contact Me!</span></h2>
 
-        <form action="https://formsubmit.co/alvaroperinan@gmail.com" method="POST"">
+        <form action="https://formsubmit.co/alvaroperinan@gmail.com" method="POST">
             <div class="input-box">
                 <input type="text" name="fullname" placeholder="Full Name">
                 <input type="email" name="email"placeholder="Email Address">
