volver a pagina de inicio

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             </div>
             <textarea name="menssage" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
             <input type="submit" name="submit" value="Send Message" class="btn">
-            <input type='hidden' name='_next' value='#home'/>
+            <input type='hidden' name='_next' value='https://alvaroperinan.netlify.app/'/>
             <input type='hidden' name='_captcha' value='false'/>
         </form>
 
