--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <div class="social-media">
                 <a href="https://github.com/Alvaroph22"  target="_blank" ><i class='bx bxl-github'></i></a>
-                <a href="https:www.linkedin.com/in/alvaro-enrique-perinan-hernandez"  target="_blank" ><i class='bx bxl-linkedin'></i></a>
+                <a href="https://www.linkedin.com/in/alvaro-enrique-perinan-hernandez"  target="_blank" ><i class='bx bxl-linkedin'></i></a>
                 <a href="mailto:alvaroperinan@gmail.com"  target="_blank" ><i class='bx bxl-gmail'></i></a>
             </div>
 
