Se agrega imagen de proyectos

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="images/fondo.png" alt="">
+                <img src="images/portfolio4.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Hotel Alura</h4>
                     <p>Java - Git - Github</p>
@@ -178,7 +178,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="images/fondo.png" alt="">
+                <img src="images/portfolio5.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Conversor de Monedas</h4>
                     <p>Java - Api - Git - Github</p>
